--- a/Model_Architecture/config/reconstruct_config.yaml
+++ b/Model_Architecture/config/reconstruct_config.yaml
@@ -1,8 +1,9 @@
 experiment:
     batch_size: 128
-    epochs: 1
-    learning_rate: 0.01
+    epochs: 10
+    learning_rate: 0.5
 model:
+    seq_len: 216
     input_size: 640
     layer_num: 4 
     output_size: 128 #librosa n_mels
