--- a/Model_Architecture/config/reconstruct_config.yaml
+++ b/Model_Architecture/config/reconstruct_config.yaml
@@ -1,10 +1,16 @@
+features:
+    chords: ["chroma"]
+    rhythms: ["tempogram"]
+    timbre: ["mfcc"]
+    emotions: ["static_arousal", "static_valence"]
 experiment:
     batch_size: 128
-    epochs: 10
-    learning_rate: 0.5
+    epochs: 100
+    learning_rate: 0.005
 model:
     seq_len: 216
-    input_size: 640
+    # need to sync with memorability model config
+    input_size: 200
     layer_num: 4 
     output_size: 128 #librosa n_mels
 path:
