--- a/Model_Architecture/config/reconstruct_config.yaml
+++ b/Model_Architecture/config/reconstruct_config.yaml
@@ -6,13 +6,14 @@ features:
 experiment:
     batch_size: 128
     epochs: 100
-    learning_rate: 0.005
+    learning_rate: 0.0005
 model:
     seq_len: 216
     # need to sync with memorability model config
     input_size: 200
     layer_num: 4 
     output_size: 128 #librosa n_mels
+    downsampling_factor: 4
 path:
     features_dir: "data/features"
     hidden_states_dir: "data/hidden_states"
