--- a/Model_Architecture/config/h_lstm.yaml
+++ b/Model_Architecture/config/h_lstm.yaml
@@ -1,26 +1,25 @@
 # non end-to-end configuration
 features:
     chords: ["chroma"]
-    # rhythms: ["tempogram"]
+    rhythms: ["tempogram"]
     timbre: ["mfcc"]
     emotions: ["static_arousal", "static_valence"]
     
 experiment:
     batch_size: 64
-    epochs: 100
     num_workers: 15
 
 model:
-    seq_len: 216
+    seq_len: 157 # under 16kHz sampling rate
     # ==== make sure size is consistent with the one from dataloader ====
-    # sequential_input_size: 408
-    sequential_input_size: 24
+    sequential_input_size: 416
+    # sequential_input_size: 32
     non_sequential_input_size: 2
     # ===================================================================
     hidden_size: 100
     layer_num: 4
     bidirectional: True
-    ranking_weight: 0.2
+    ranking_weight: 0.5
 
 hparas:                                   # Experiment hyper-parameters
     valid_step: 1000
@@ -33,7 +32,7 @@ hparas:                                   # Experiment hyper-parameters
     grad_clip: 'inf'
     optimizer:
         type: 'Adam'
-        lr: 0.00005
+        lr: 0.001
     lr_scheduler:
         type: 'warmup'                   # 'fixed'/'warmup'/'decay'/'reduce_lr_on_plateau'
     freq_loss_type: 'l1'                         # 'l1'/'mse'
