--- a/Model_Architecture/config/h_mlp.yaml
+++ b/Model_Architecture/config/h_mlp.yaml
@@ -7,16 +7,38 @@ features:
     
 experiment:
     batch_size: 64
-    epochs: 100
+    num_workers: 15
 
 model:
-      # ==== make sure size is consistent with the one from dataloader ====
-    sequential_input_size: 24
+    seq_len: 157 # under 16kHz sampling rate
+    # ==== make sure size is consistent with the one from dataloader ====
+    sequential_input_size: 416
+    # sequential_input_size: 32
     non_sequential_input_size: 2
     # ===================================================================
-    
     hidden_size: 100
-    learning_rate: 0.0005
+    layer_num: 4
+    bidirectional: True
+    ranking_weight: 0.5
+
+hparas:                                   # Experiment hyper-parameters
+    valid_step: 1000
+    curriculum: 0
+    max_epoch: 100
+    max_step: 15001
+    tf_start: 1.0
+    tf_end: 1.0
+    tf_step: 500000
+    grad_clip: 'inf'
+    optimizer:
+        type: 'Adam'
+        lr: 0.001
+    lr_scheduler:
+        type: 'warmup'                   # 'fixed'/'warmup'/'decay'/'reduce_lr_on_plateau'
+    freq_loss_type: 'l1'                         # 'l1'/'mse'
+    differential_loss: False
+    emphasize_linear_low: False
+
 path:
     features_dir: "data/features"
     labels_dir: "data/labels"
