--- a/Model_Architecture/config/probing.yaml
+++ b/Model_Architecture/config/probing.yaml
@@ -8,7 +8,7 @@ experiment:
     epochs: 100
     learning_rate: 0.0005
 model:
-    seq_len: 216
+    seq_len: 157 # under 16kHz sampling rate
     # need to sync with memorability model config
     input_size: 200
     layer_num: 4 
