--- a/Model_Architecture/config/h_mlp.yaml
+++ b/Model_Architecture/config/h_mlp.yaml
@@ -8,6 +8,7 @@ features:
 experiment:
     batch_size: 64
     num_workers: 15
+    log_freq: 50
 
 model:
     seq_len: 157 # under 16kHz sampling rate
@@ -19,7 +20,7 @@ model:
     hidden_size: 100
     layer_num: 4
     bidirectional: True
-    ranking_weight: 0.5
+    ranking_weight: 0
 
 hparas:                                   # Experiment hyper-parameters
     valid_step: 1000
@@ -41,4 +42,5 @@ hparas:                                   # Experiment hyper-parameters
 
 path:
     features_dir: "data/features"
-    labels_dir: "data/labels"
+
+    label_file: "data/labels/track_memorability_scores_beta.csv"
