--- a/Model_Architecture/config/pase_lstm.yaml
+++ b/Model_Architecture/config/pase_lstm.yaml
@@ -11,13 +11,13 @@ experiment:
 
 model:
     input_dim: 500
-    dnn_lay: '256,1'
-    dnn_drop: '0.15,0.0'
-    dnn_use_batchnorm: 'False,False'
-    dnn_use_laynorm: 'True,False'
-    dnn_use_laynorm_inp: 'True'
-    dnn_use_batchnorm_inp: 'False'
-    dnn_act: 'relu,relu'
+    num_layers: '4'
+    bias: 'True'
+    hidden_size: '250'
+    batch_first: 'True'
+    bidirectional: 'True'
+    dropout: '0.15'
+    seq_len: 100
     ranking_weight: 0.5
 
 dataset: 
@@ -43,8 +43,6 @@ hparas:    # Experiment hyper-parameters
     optimizer:
         type: 'Adam'
         lr: 0.00001
-    scheduler:
-        type: "LambdaLR"
 path:
     encoder_ckpt: "weights/e_pase/22-01-23_12:47/FE_best.ckpt"
     # after fine-tuned
