--- a/Model_Architecture/config/e_crnn.yaml
+++ b/Model_Architecture/config/e_crnn.yaml
@@ -1,15 +1,26 @@
-# non end-to-end configuration
-features:
-    chords: ["chroma"]
-    rhythms: ["tempogram"]
-    timbre: ["mfcc"]
-    emotions: ["static_arousal", "static_valence"]
-    
 experiment:
     batch_size: 16
     num_workers: 15
+    log_freq: 50
+    
+augmentation:
+    reverb:
+        ir_fmt: "wav"
+        data_root: "data/simulated_rirs_16k/largeroom/Room001"
+        prob: 0.4
+
+    add_noise:
+        snr_options: [5, 10, 20, 40, 60, 80, 100]
+        prob: 0.4
+        path: "data/"
+
+    time_stretch:
+        speed_range: [0.9, 1,1]
+        prob: 0.3
+
 
 model:
+    use_ranking_loss: False
     image_size: 64
     conv_kernel_size: 3
     stride: 1
@@ -17,45 +28,46 @@ model:
 
     conv_1: 
         in_channels: 1
-        out_channels: 64
+        out_channels: 4
         pool_kernel: 2
 
     conv_2: 
-        in_channels: 64
-        out_channels: 128
+        in_channels: 4
+        out_channels: 8
         pool_kernel: 2
 
     conv_3: 
-        in_channels: 128
-        out_channels: 256
+        in_channels: 8
+        out_channels: 8
         pool_kernel: 2
 
     gru: 
         layer_num: 1
-        input_size: 2048 # conv_3[out_channel]*image_size//conv_1[pool_kernel]//conv_2[pool_kernel]/conv_3[pool_kernel]
-        hidden_size: 256
+        input_size: 128 # conv_3[out_channel]*image_size//conv_1[pool_kernel]//conv_2[pool_kernel]/conv_3[pool_kernel]
+        hidden_size: 32
         bidirectional: False
 
     fc_1:
-        input_size: 2048
-        output_size: 512
+        input_size: 512 # gru[hidden_size]*conv_3[out_channel]//conv_2[pool_kernel]/conv_3[pool_kernel]
+        output_size: 64
 
     fc_2:
-        input_size: 512
-        output_size: 256
+        input_size: 64
+        output_size: 16
 
     output:
-        input_size: 256
+        input_size: 16
         output_size: 1
 
 
 
-    ranking_weight: 0.5
+    ranking_weight: 0.4
 
 hparas:                                   # Experiment hyper-parameters
+    sample_rate: 16000
     valid_step: 1000
     curriculum: 0
-    max_epoch: 100
+    max_epoch: 1000
     max_step: 15001
     tf_start: 1.0
     tf_end: 1.0
@@ -63,13 +75,13 @@ hparas:                                   # Experiment hyper-parameters
     grad_clip: 'inf'
     optimizer:
         type: 'Adam'
-        lr: 0.0001
+        lr: 0.00005
     lr_scheduler:
         type: 'warmup'                   # 'fixed'/'warmup'/'decay'/'reduce_lr_on_plateau'
-    freq_loss_type: 'l1'                         # 'l1'/'mse'
-    differential_loss: False
-    emphasize_linear_low: False
 
 path:
+    audio_root: "data/raw_audios"
+    # noise_path: [data/pink_noise_3m.wav]
+    
     img_dir: "data/mels_img"
-    labels_dir: "data/labels"
+    label_file: "data/labels/track_memorability_scores_beta.csv"
