--- a/Model_Architecture/config/e_crnn.yaml
+++ b/Model_Architecture/config/e_crnn.yaml
@@ -4,6 +4,15 @@ experiment:
     log_freq: 50
     
 augmentation:
+    vol:
+        gain_range: [0.5, 1.5]
+        prob: 0.3
+
+    banddrop:
+        ir_files: []
+        data_root: "data/filters"
+        prob: 0.4
+
     reverb:
         ir_fmt: "wav"
         data_root: "data/simulated_rirs_16k/largeroom/Room001"
@@ -11,8 +20,14 @@ augmentation:
 
     add_noise:
         snr_options: [5, 10, 20, 40, 60, 80, 100]
-        prob: 0.4
         path: "data/"
+        prob: 0.4
+
+    fade:
+        fade_shape: "linear"
+        fade_in_sec: 1
+        fade_out_sec: 1
+        prob: 0.4
 
     time_stretch:
         speed_range: [0.9, 1,1]
@@ -38,7 +53,7 @@ model:
 
     conv_3: 
         in_channels: 8
-        out_channels: 8
+        out_channels: 16
         pool_kernel: 2
 
     gru: 
@@ -48,15 +63,15 @@ model:
         bidirectional: False
 
     fc_1:
-        input_size: 512 # gru[hidden_size]*conv_3[out_channel]//conv_2[pool_kernel]/conv_3[pool_kernel]
-        output_size: 64
+        input_size: 256 # gru[hidden_size]*conv_3[out_channel]//conv_2[pool_kernel]/conv_3[pool_kernel]
+        output_size: 128
 
     fc_2:
-        input_size: 64
-        output_size: 16
+        input_size: 128
+        output_size: 64
 
     output:
-        input_size: 16
+        input_size: 64
         output_size: 1
 
 
@@ -75,7 +90,7 @@ hparas:                                   # Experiment hyper-parameters
     grad_clip: 'inf'
     optimizer:
         type: 'Adam'
-        lr: 0.00005
+        lr: 0.000005
     lr_scheduler:
         type: 'warmup'                   # 'fixed'/'warmup'/'decay'/'reduce_lr_on_plateau'
 
