--- a/Model_Architecture/config/h_mlp.yaml
+++ b/Model_Architecture/config/h_mlp.yaml
@@ -1,41 +1,41 @@
 # non end-to-end configuration
 features:
-    chords: ["chroma"]
-    rhythms: ["tempogram"]
-    timbre: ["mfcc"]
+    chords: ["chroma", "tonnetz"]
+    # rhythms: ["tempogram"]
+    # timbre: ["mfcc", "mfcc_delta", "mfcc_delta2"]
     emotions: ["static_arousal", "static_valence"]
     
 experiment:
-    batch_size: 64
+    batch_size: 16
     num_workers: 15
     log_freq: 50
 
 model:
     seq_len: 157 # under 16kHz sampling rate
     # ==== make sure size is consistent with the one from dataloader ====
-    sequential_input_size: 416
+    sequential_input_size: 18
     # sequential_input_size: 32
     non_sequential_input_size: 2
     # ===================================================================
     hidden_size: 100
-    layer_num: 4
-    bidirectional: True
-    ranking_weight: 0
+    ranking_weight: 0.7
+    dropout_rate: 0.5
 
 hparas:                                   # Experiment hyper-parameters
     valid_step: 1000
     curriculum: 0
-    max_epoch: 100
-    max_step: 15001
+    max_epoch: 10000
+    max_step: 150001
     tf_start: 1.0
     tf_end: 1.0
     tf_step: 500000
     grad_clip: 'inf'
     optimizer:
         type: 'Adam'
-        lr: 0.0005
+        lr: 0.0001
     lr_scheduler:
-        type: 'warmup'                   # 'fixed'/'warmup'/'decay'/'reduce_lr_on_plateau'
+        type: 'reduce_lr_on_plateau'                   # 'fixed'/'warmup'/'decay'/'reduce_lr_on_plateau'
+        # type:                    # 'fixed'/'warmup'/'decay'/'reduce_lr_on_plateau'
     freq_loss_type: 'l1'                         # 'l1'/'mse'
     differential_loss: False
     emphasize_linear_low: False
