--- a/Model_Architecture/config/h_lstm.yaml
+++ b/Model_Architecture/config/h_lstm.yaml
@@ -1,8 +1,8 @@
 # non end-to-end configuration
 features:
-    chords: ["chroma"]
-    # rhythms: ["tempogram"]
-    # timbre: ["mfcc"]
+    chords: ["chroma", "tonnetz"]
+    rhythms: ["tempogram"]
+    timbre: ["mfcc", "mfcc_delta", "mfcc_delta2"]
     emotions: ["static_arousal", "static_valence"]
     
 experiment:
@@ -12,19 +12,21 @@ experiment:
 model:
     seq_len: 157 # under 16kHz sampling rate
     # ==== make sure size is consistent with the one from dataloader ====
-    # sequential_input_size: 416
-    sequential_input_size: 12
+    sequential_input_size: 462
+    # sequential_input_size: 12
     non_sequential_input_size: 2
     # ===================================================================
-    hidden_size: 100
+    hidden_size: 256
     layer_num: 4
     bidirectional: True
     ranking_weight: 0.5
+    dropout_rate: 0
+    use_ranking_loss: False
 
 hparas:                                   # Experiment hyper-parameters
     valid_step: 1000
     curriculum: 0
-    max_epoch: 100
+    max_epoch: 1000
     max_step: 15001
     tf_start: 1.0
     tf_end: 1.0
@@ -32,12 +34,12 @@ hparas:                                   # Experiment hyper-parameters
     grad_clip: 'inf'
     optimizer:
         type: 'Adam'
-        lr: 0.00005
+        lr: 0.001
     lr_scheduler:
         type: 'warmup'                   # 'fixed'/'warmup'/'decay'/'reduce_lr_on_plateau'
-    freq_loss_type: 'l1'                         # 'l1'/'mse'
-    differential_loss: False
-    emphasize_linear_low: False
+    # freq_loss_type: 'l1'                         # 'l1'/'mse'
+    # differential_loss: False
+    # emphasize_linear_low: False
 
 path:
     features_dir: "data/features"
